[package]
name = "Bamboo"
version = "0.1.0"
edition = "2021"
authors = ["stevekeol <stevekeol.x@gmail.com>"]
repository = "https://github.com/stevekeol/Bamboo"
readme = "README.md"
description = "🎋 High Frequency Cryptocurrency Trading System Based on Rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Misc
chrono = {version = "0.4.21", features = ["serde"]} # DateTime, Utc