[package]
name = "Bamboo"
version = "0.1.0"
edition = "2021"
authors = ["stevekeol <stevekeol.x@gmail.com>"]
repository = "https://github.com/stevekeol/Bamboo"
readme = "README.md"
description = "🎋 High Frequency Cryptocurrency Trading System Based on Rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Barter Ecosystem
barter-data = "0.7.0" # data source, as the heart beat of the system
barter-integration = "0.5.3" # to build robust financial exchange integrations, primarily for public data collection & trade execution

# Misc
chrono = {version = "0.4.21", features = ["serde"]} # DateTime, Utc
uuid = {version = "1.2.2", features = ["v4", "serde"]}